--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ li a {
   background-color: #eeccff;
   font-family: Arial, Helvetica, sans-serif;
   box-shadow: 10px 10px;
+   border-style: inset;
+  border-radius: 5px;
 }
 
 body {
@@ -46,8 +48,10 @@ body {
 
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #0000b3;
+   font-weight: 500;
+   font-family: Futura;
+  color: #a64dff;
+  background-color: #e6f5ff;
 
   margin-top: 20px;
   margin-bottom: 10px;
@@ -55,6 +59,10 @@ h1 {
   margin-left: 50px;
 
   font-size: 60px;
+  border-radius: 10px;
+  border-color: #66c2ff;
+  width: 600px;
+  padding: 20px;
 }
 
 h2 {
